# shapix

./: .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  mkdocs.yml  noxfile.py  pyproject.toml  pytest.toml  ruff.toml  tox.ini  tox.toml  ty.toml  zensical.toml
.github/workflows/: ci.yml  docs.yml  nightly.yml  pypi.yml
docs/: frame-resolution-validator-diagnostics-plan.md  index.md
docs/api/: claw.md  cupy.md  index.md  jax.md  numpy.md  optree.md  shapix.md  torch.md
docs/assets/js/: tesseract.js
docs/examples/: index.md
docs/features/: array-types.md  claw.md  decorator.md  dimensions.md  index.md  like-types.md  static-typing.md  tree-annotations.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/stylesheets/: extra.css
examples/: shapix_tour.ipynb
overrides/: main.html
src/shapix/: __init__.py  _array_types.py  _decorator.py  _dimensions.py  _dtypes.py  _imports.py  _memo.py  _pytree.py  _runtime_hints.py  _shape.py  _tree.py  claw.py  cupy.py  jax.py  numpy.py  optree.py  torch.py
src/shapix/jaxtyping/: __init__.py  array.py  dimension.py  dtype.py
tests/: conftest.py  test_array_types.py  test_arraylike.py  test_coverage_edges.py  test_cupy.py  test_decorator.py  test_dimensions.py  test_dtypes.py  test_integration.py  test_jax.py  test_memo.py  test_numpy.py  test_pytree.py  test_shape.py  test_torch.py  test_tree.py  test_typecheck.py
tests/typing/: __init__.py  check_annotations.py  check_annotations_cupy.py  check_annotations_jax.py  check_annotations_torch.py  check_decorator.py  check_imports.py  check_like_types.py  check_make_array_type.py  check_pytree.py  check_tree.py
tools/: __init__.py  validate_tox_env.py
