[project]
name = "shapix"
version = "0.1.0"
description = "Elegant runtime shape and dtype checking for NumPy, JAX, and PyTorch arrays — powered by beartype."
readme = "README.md"
license = "MIT"
authors = [{ name = "acecchini", email = "ale.cecchini.valette@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["beartype>=0.20,<0.23"] # Tested with 0.20-0.22; see tox.toml
keywords = [
  "type-checking",
  "shape",
  "dtype",
  "numpy",
  "jax",
  "pytorch",
  "beartype",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/acecchini/shapix"
Repository = "https://github.com/acecchini/shapix"
Issues = "https://github.com/acecchini/shapix/issues"

[dependency-groups]
# Backends are CPU-only for dev/CI. Shapix is device-agnostic — it checks
# .shape and .dtype only. Users install their own numpy/jax/torch/optree.
optional = ["numpy>=2.2.0", "torch>=2.6.0", "jax[cpu]>=0.5.0", "optree>=0.14.0"]
static = ["pyright>=1.1.408", "mypy>=1.19.1", "ty>=0.0.20"]
dev = [
  "ruff>=0.15.4",
  "pytest>=9.0.2",
  "pytest-cov>=6.0.0",
  "pytest-xdist>=3.5.0",
  "pre-commit>=4.5.1",
  "tox>=4.47.1",
  "tox-uv>=1.33.1",
  "codespell>=2.4.1",
  "ipykernel>=7.2.0",
  "matplotlib>=3.10.8",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
default-groups = ["dev", "optional", "static"]
required-version = ">=0.10.4,<0.11.0"
python-preference = "only-managed"

[tool.codespell]
skip = "uv.lock,*.ipynb,.venv,.tox"
ignore-words-list = "numbe"

[tool.pyright]
typeCheckingMode = "strict"
include = ["src", "tests/typing"]
# Beartype's Is[lambda ...] validators produce unknown types in closures
reportUnknownLambdaType = false
reportUnknownMemberType = false
reportUnknownVariableType = false
reportUnknownArgumentType = false
# _TreeFactory is used at runtime via module-level assignment, not direct reference
reportUnusedClass = false
# numpy._NestedSequence, ._SupportsArray, and internal _dim_spec access
reportPrivateUsage = false
reportUnusedImport = "warning"
pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unreachable = true

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["shapix"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_also = [
  "if tp.TYPE_CHECKING:",
  "if typing.TYPE_CHECKING:",
  "if TYPE_CHECKING:",
]
